Provide additional info about pagination in index response (#32)
* Provide additional info about pagination in index response

* Refactor index processing

* Reorder serializer options

* Add some tests

* Make rubocop and swagger happy
